2007-06-12  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  MonodocEditor/gtk-gui/Monodoc.Editor.OpenDocDialog.cs,
	  MonodocEditor/gtk-gui/gui.stetic: GUI code added to get a
	  Filechooser when the open action is activated.
	* MonodocEditor/OpenDocDialog.cs, MonodocEditor.mds: Minor changes.
	* EcmaUtils/MyClass.cs, EcmaUtils/AssemblyInfo.cs,
	  EcmaUtils/EcmaUtils.mdp: Added to the solution the project for the
	  library that will hold the classes to manipulate de XML documents.

2007-06-11  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/Driver.cs, MonodocEditor/MainWindow.cs,
	  MonodocEditor/EditorWindow.cs, MonodocEditor/gtk-gui/MainWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic,
	  MonodocEditor/gtk-gui/Monodoc.Editor.EditorWindow.cs: Changed
	  MainWindow to EditorWindow. Changed the namespace to
	  Monodoc.Editor.
	* MonodocEditor/MonodocEditor.mdp,
	  MonodocEditor/gtk-gui/Monodoc.Editor.OpenDocDialog.cs,
	  MonodocEditor/OpenDocDialog.cs: Added a FileSelector to open XML
	  file to edit.

2007-06-11  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/AssemblyInfo.cs: Defined some attributes for the
	  assembly.
	* MonodocEditor/Driver.cs, MonodocEditor/MainWindow.cs,
	  MonodocEditor/gtk-gui/MainWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic: Added an Open action to File
	  Menu.

2007-06-11  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/MainWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  MonodocEditor/gtk-gui/MainWindow.cs,
	  MonodocEditor/gtk-gui/gui.stetic: Added a Menubar, Status Bar to
	  app.

2007-05-31  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/AssemblyInfo.cs, MonodocEditor/Driver.cs,
	  MonodocEditor/MainWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  MonodocEditor/Main.cs: Change of the header for the source code of
	  the proyect, the Main.cs file was renamed to Driver.cs too.