@@ -30,23 +30,8 @@ public partial class EditorWindow : Gtk.Window {
 
 	protected virtual void OnOpenActivated(object sender, System.EventArgs e)
 	{
-		OpenDocDialog dialog = new OpenDocDialog ();
-		
-		ResponseType rsp = (ResponseType) dialog.Run ();
-		
-		if (rsp == ResponseType.Accept) {
-			dialog.Hide();
-			MessageDialog md = new MessageDialog (this,
-				DialogFlags.DestroyWithParent,
-				MessageType.Info,
-				ButtonsType.Ok,
-				string.Format("Hellooooo!"));
-				
-				md.Run ();
-				md.Destroy();
-		}
-		
-		dialog.Destroy();
+		OpenDocDialog dialog = new OpenDocDialog ();	
+		dialog.Run ();
 	}
 }
 }
