@@ -23,6 +23,7 @@
     <File name="./OpenDocDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/Monodoc.Editor.OpenDocDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/Monodoc.Editor.EditorWindow.cs" subtype="Code" buildaction="Compile" />
+    <File name="./monodoc.png" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -33,6 +34,6 @@
     <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </References>
-  <GtkDesignInfo partialTypes="True" />
   <Deployment.LinuxDeployData scriptName="monodoceditor" />
+  <GtkDesignInfo partialTypes="True" />
 </Project>
