@@ -1,5 +1,5 @@
 //
-// OpenDocDialog.cs: Dialog to open a XML file.
+// OpenDocDialog.cs: Dialog to open a XML Mono documenation.
 //
 // Author:
 //   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
@@ -8,14 +8,51 @@
 //
 
 using System;
+using System.IO;
 using Gtk;
 
 namespace Monodoc.Editor {
 public partial class OpenDocDialog : Gtk.Dialog {
+	private string filename = String.Empty;
 	
 	public OpenDocDialog()
 	{
 		this.Build();
+		FileFilter allFiles = new FileFilter ();
+		FileFilter xmlFiles = new FileFilter ();
+		
+		allFiles.AddPattern ("*.*");
+		allFiles.Name = "All Files";
+		
+		xmlFiles.AddPattern ("*.xml");
+		xmlFiles.Name = "XML Files";
+		
+		openFileDialog.AddFilter (xmlFiles);
+		openFileDialog.AddFilter (allFiles);
+		openFileDialog.SetCurrentFolder ("/usr/src/");
+	}
+
+	private void OnButtonCancelClicked (object sender, System.EventArgs e)
+	{
+		Destroy ();
+	}
+
+	private void OnButtonOkClicked (object sender, System.EventArgs e)
+	{
+		filename = openFileDialog.Filename;
+		Console.WriteLine ("Filename: "  + filename);
+		Destroy ();
+	}
+
+	private void OnOpenFileDialogFileActivated (object sender, System.EventArgs e)
+	{
+		filename = openFileDialog.Filename;
+		Console.WriteLine ("Filename: "  + filename);
+		Destroy ();
+	}
+	
+	public string Document {
+		get { return filename; }
 	}
 }
 }
