@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <stetic-interface>
+  <configuration>
+    <images-root-path>../</images-root-path>
+  </configuration>
   <widget class="Gtk.Window" id="Monodoc.Editor.EditorWindow" design-size="442 300">
     <action-group name="Default">
       <action id="File">
@@ -23,8 +26,8 @@
       </action>
     </action-group>
     <property name="MemberName" />
-    <property name="Title" translatable="yes">MainWindow</property>
-    <property name="WindowPosition">None</property>
+    <property name="Title" translatable="yes">Monodoc Documentation Editor</property>
+    <property name="Icon">resource:monodoc.png</property>
     <signal name="DeleteEvent" handler="OnDeleteEvent" />
     <child>
       <widget class="Gtk.VBox" id="vbox1">
@@ -81,7 +84,6 @@
   </widget>
   <widget class="Gtk.Dialog" id="Monodoc.Editor.OpenDocDialog" design-size="629 448">
     <property name="MemberName" />
-    <property name="Title" translatable="yes">window1</property>
     <property name="Buttons">2</property>
     <property name="HelpButton">False</property>
     <child internal-child="VBox">
@@ -89,8 +91,9 @@
         <property name="MemberName" />
         <property name="BorderWidth">2</property>
         <child>
-          <widget class="Gtk.FileChooserWidget" id="filechooserwidget1">
+          <widget class="Gtk.FileChooserWidget" id="openFileDialog">
             <property name="MemberName" />
+            <signal name="FileActivated" handler="OnOpenFileDialogFileActivated" />
           </widget>
           <packing>
             <property name="Position">0</property>
@@ -116,6 +119,7 @@
             <property name="StockId">gtk-cancel</property>
             <property name="IsDialogButton">True</property>
             <property name="ResponseId">-6</property>
+            <signal name="Clicked" handler="OnButtonCancelClicked" />
             <property name="label">gtk-cancel</property>
           </widget>
           <packing>
@@ -133,6 +137,7 @@
             <property name="StockId">gtk-open</property>
             <property name="IsDialogButton">True</property>
             <property name="ResponseId">-3</property>
+            <signal name="Clicked" handler="OnButtonOkClicked" />
             <property name="label">gtk-open</property>
           </widget>
           <packing>
