@@ -1,0 +1,13 @@
+<CombineEntry name="Packages" fileversion="2.0" ctype="PackagingProject">
+  <Packages>
+    <Package name="monodoc-editor">
+      <Builder rootEntry="./MonodocEditor.mds" TargetDirectory="/home/hector/Projects/mono-soc-2007/hector/MonodocEditor" DefaultConfiguration="Release" ctype="TarballDeployTarget">
+        <ChildEntries>
+          <Entry>./MonodocEditor/MonodocEditor.mdp</Entry>
+          <Entry>./Packages.mdse</Entry>
+          <Entry>./EcmaUtils/EcmaUtils.mdp</Entry>
+        </ChildEntries>
+      </Builder>
+    </Package>
+  </Packages>
+</CombineEntry>
